preprocessing image for inception v3 model and saving the encoded teat and train data

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "automatic image captioning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPJHj1a8X1d5KG117fpBJOG",
+      "authorship_tag": "ABX9TyPRcfb4jbB0KOmcBmeNT4zh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,13 +34,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a0bf52e8-e528-418f-c19d-3daf8e71934c"
+        "outputId": "e886c3cf-d635-4800-d0d5-63416fd69314"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
       "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QonyUbIrLqo6",
+        "outputId": "3da281d8-974f-488f-e633-4f1fedb4fe40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "drive.mount(\"/content/drive\", force_remount=True)"
+      ],
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,10 +84,31 @@
         "from numpy import array\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
         "import string\n",
-        "import glob"
+        "import os\n",
+        "from PIL import Image\n",
+        "import glob\n",
+        "import pickle\n",
+        "from pickle import dump, load\n",
+        "from time import time\n",
+        "from keras.preprocessing import sequence\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import LSTM, Embedding, TimeDistributed, Dense, RepeatVector,\\\n",
+        "                         Activation, Flatten, Reshape, concatenate, Dropout, BatchNormalization\n",
+        "from keras.optimizers import Adam, RMSprop\n",
+        "from keras.layers.wrappers import Bidirectional\n",
+        "from keras.layers.merge import add\n",
+        "from keras.applications.inception_v3 import InceptionV3\n",
+        "from keras.preprocessing import image\n",
+        "from keras.models import Model\n",
+        "from keras import Input, layers\n",
+        "from keras import optimizers\n",
+        "from keras.applications.inception_v3 import preprocess_input\n",
+        "from keras.preprocessing.text import Tokenizer\n",
+        "from keras.preprocessing.sequence import pad_sequences"
       ],
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -74,7 +118,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61efced5-1aba-41b4-ff39-7fdd4b577e9a"
+        "outputId": "4b2d1882-ad5a-4b17-c4e9-f56f7c4a4763"
       },
       "source": [
         "# loading doc into memory\n",
@@ -92,7 +136,7 @@
         "doc = load_doc(filename)\n",
         "print(doc[:300])"
       ],
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +157,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JOCu-2iXP-zk",
-        "outputId": "9a551dd2-9e91-478e-8bf2-63877efa4df7"
+        "outputId": "56b27567-5095-42c3-824b-48b6f88b2e23"
       },
       "source": [
         "def load_descriptions(doc):\n",
@@ -141,7 +185,7 @@
         "descriptions = load_descriptions(doc)\n",
         "print('Loaded: %d ' % len(descriptions))"
       ],
-      "execution_count": 25,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,12 +203,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pnHp9uOIUUv1",
-        "outputId": "e38a5d97-6d0a-4a66-e059-1877aed77dca"
+        "outputId": "41119468-c3e8-4acb-b069-80575f8a2225"
       },
       "source": [
         "list(descriptions.keys())[10:15]\n"
       ],
-      "execution_count": 26,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +224,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 7
         }
       ]
     },
@@ -191,28 +235,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9oybSKGiVAGL",
-        "outputId": "f3a0e4fd-9974-420f-f5b4-d401c8259d78"
+        "outputId": "33a9d56f-fa33-4511-ec82-6458a93c453a"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 27,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['A brown and white dog is running through the snow .',\n",
-              " 'A dog is running in the snow',\n",
-              " 'A dog running through snow .',\n",
-              " 'a white and brown dog is running through a snow covered field .',\n",
-              " 'The white and brown dog is running over the surface of the snow .']"
+              "['brown and white dog is running through the snow',\n",
+              " 'dog is running in the snow',\n",
+              " 'dog running through snow',\n",
+              " 'white and brown dog is running through snow covered field',\n",
+              " 'the white and brown dog is running over the surface of the snow']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 8
         }
       ]
     },
@@ -244,7 +288,7 @@
         "# cleaning descriptions\n",
         "clean_descriptions(descriptions)"
       ],
-      "execution_count": 28,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -254,12 +298,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjgJ7T1oqRTI",
-        "outputId": "eab26c97-65d1-485d-a691-f20ae822d91f"
+        "outputId": "12cd1355-1948-41a3-c596-2c1362acd5bb"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 29,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 9
         }
       ]
     },
@@ -286,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jr6avM0baElj",
-        "outputId": "e297a921-c459-42ff-9bc2-6b83f2e6e5ef"
+        "outputId": "4677cc1e-97de-40e0-be13-59e5af937a54"
       },
       "source": [
         "# converting the loaded descriptions into a vocabulary of words\n",
@@ -301,7 +345,7 @@
         "vocabulary = to_vocabulary(descriptions)\n",
         "print('Original Vocabulary len: %d' % len(vocabulary))"
       ],
-      "execution_count": 30,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +375,7 @@
         "\n",
         "save_descriptions(descriptions, 'descriptions.txt')"
       ],
-      "execution_count": 31,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -341,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eB4y-bGwsxPs",
-        "outputId": "d9cb5391-7676-4b9a-d2d4-3680fa60d873"
+        "outputId": "0eb5cd39-b4ed-4ad3-cc3f-2bfaf2196997"
       },
       "source": [
         "# loading a pre-defined list of photo identifiers\n",
@@ -363,7 +407,7 @@
         "train = load_set(filename)\n",
         "print('Dataset: %d' % len(train))"
       ],
-      "execution_count": 22,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +429,7 @@
         "# Creating a list of all image names in the directory\n",
         "img = glob.glob(images + '*?.jpg')"
       ],
-      "execution_count": 37,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -417,7 +461,7 @@
         "    if i[len(images):] in train_images: # Checking if the image belongs to training set\n",
         "        train_img.append(i) # Adding it to the list of train images"
       ],
-      "execution_count": 40,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -439,17 +483,17 @@
       "source": [
         "# Below file conatains the names of images to be used in test data\n",
         "test_images_file = '/content/drive/MyDrive/flicker8k/Flickr_Data/Flickr_TextData/Flickr_8k.testImages.txt'\n",
-        "# Read the validation image names in a set# Read the test image names in a set\n",
+        "# Reading the validation image names in a set# Read the test image names in a set\n",
         "test_images = set(open(test_images_file, 'r').read().strip().split('\\n'))\n",
         "\n",
-        "# Create a list of all the test images with their full path names\n",
+        "# Creating a list of all the test images with their full path names\n",
         "test_img = []\n",
         "\n",
         "for i in img: # img is list of full path names of all images\n",
-        "    if i[len(images):] in test_images: # Check if the image belongs to test set\n",
-        "        test_img.append(i) # Add it to the list of test images"
+        "    if i[len(images):] in test_images: # Checking if the image belongs to test set\n",
+        "        test_img.append(i) # Adding it to the list of test images"
       ],
-      "execution_count": 42,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -461,6 +505,208 @@
         "test_img"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RatRRFhIygdR",
+        "outputId": "6a82369b-e7ec-4db5-c9b8-bcc285bbfedb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# loading clean descriptions into memory\n",
+        "def load_clean_descriptions(filename, dataset):\n",
+        "\t# loading document\n",
+        "\tdoc = load_doc(filename)\n",
+        "\tdescriptions = dict()\n",
+        "\tfor line in doc.split('\\n'):\n",
+        "\t\t# spliting line by white space\n",
+        "\t\ttokens = line.split()\n",
+        "\t\t# spliting id from description\n",
+        "\t\timage_id, image_desc = tokens[0], tokens[1:]\n",
+        "\t\t# skiping images not in the set\n",
+        "\t\tif image_id in dataset:\n",
+        "\t\t\t# creating list\n",
+        "\t\t\tif image_id not in descriptions:\n",
+        "\t\t\t\tdescriptions[image_id] = list()\n",
+        "\t\t\t# wraping description in tokens\n",
+        "\t\t\tdesc = 'startseq ' + ' '.join(image_desc) + ' endseq'\n",
+        "\t\t\t# storing\n",
+        "\t\t\tdescriptions[image_id].append(desc)\n",
+        "\treturn descriptions\n",
+        "\n",
+        "# descriptions\n",
+        "train_descriptions = load_clean_descriptions('descriptions.txt', train)\n",
+        "print('Descriptions: train=%d' % len(train_descriptions))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Descriptions: train=6000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I7UH_zn10kcC"
+      },
+      "source": [
+        "def preprocess(image_path):\n",
+        "    # Converting all the images to size 299x299 as expected by the inception v3 model\n",
+        "    img = image.load_img(image_path, target_size=(299, 299))\n",
+        "    # Converting PIL image to numpy array of 3-dimensions\n",
+        "    x = image.img_to_array(img)\n",
+        "    # Adding one more dimension\n",
+        "    x = np.expand_dims(x, axis=0)\n",
+        "    # preprocessing the images using preprocess_input() from inception module\n",
+        "    x = preprocess_input(x)\n",
+        "    return x"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rV2gLkS21SFc",
+        "outputId": "140d7e7f-ac1d-49d1-f5bd-41569a39c600",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Loading the inception v3 model\n",
+        "model = InceptionV3(weights='imagenet')"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/inception_v3/inception_v3_weights_tf_dim_ordering_tf_kernels.h5\n",
+            "96116736/96112376 [==============================] - 3s 0us/step\n",
+            "96124928/96112376 [==============================] - 3s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "08_Ix_PM1TgT"
+      },
+      "source": [
+        "# Creating a new model, by removing the last layer (output layer) from the inception v3\n",
+        "model_new = Model(model.input, model.layers[-2].output)"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EPMBC-Rv77PY"
+      },
+      "source": [
+        "# Function to encode a given image into a vector of size (2048, )\n",
+        "def encode(image):\n",
+        "    image = preprocess(image) # preprocessing the image\n",
+        "    fea_vec = model_new.predict(image) # Getting the encoding vector for the image\n",
+        "    fea_vec = np.reshape(fea_vec, fea_vec.shape[1]) # reshaping from (1, 2048) to (2048, )\n",
+        "    return fea_vec"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1OCIyHw27_aQ",
+        "outputId": "c716a784-7f6d-4fc7-b7b0-39e25c1bc69c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calling the funtion to encode all the train images\n",
+        "start = time()\n",
+        "encoding_train = {}\n",
+        "for img in train_img:\n",
+        "    encoding_train[img[len(images):]] = encode(img)\n",
+        "print(\"Time taken in seconds =\", time()-start)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Time taken in seconds = 2788.4534409046173\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n5pCxfVWJVNa"
+      },
+      "source": [
+        "# Saving the bottleneck train features to disk\n",
+        "with open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/Pickle_Mridul/encoded_train_images.pkl\", \"wb\") as encoded_pickle:\n",
+        "    pickle.dump(encoding_train, encoded_pickle)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hvrrMvZFJvwM",
+        "outputId": "8c116c09-64a1-417b-ea69-631bffc55e39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calling the funtion to encode all the test images\n",
+        "start = time()\n",
+        "encoding_test = {}\n",
+        "for img in test_img:\n",
+        "    encoding_test[img[len(images):]] = encode(img)\n",
+        "print(\"Time taken in seconds =\", time()-start)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Time taken in seconds = 571.1966826915741\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YpGo8UQ7Mdt-"
+      },
+      "source": [
+        "# Saving the bottleneck test features to disk\n",
+        "with open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/Pickle_Mridul/encoded_test_images_mridul.pkl\", \"wb\") as encoded_pickle:\n",
+        "    pickle.dump(encoding_test, encoded_pickle)"
+      ],
+      "execution_count": 24,
       "outputs": []
     }
   ]
