converting a dictionary of clean descriptions to a list of descriptions

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "automatic image captioning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRcfb4jbB0KOmcBmeNT4zh",
+      "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
+      "authorship_tag": "ABX9TyPidV+dkiGDckRzSDkjG94p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +35,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e886c3cf-d635-4800-d0d5-63416fd69314"
+        "outputId": "c47f76ca-2592-4c59-8df4-1299e712340a"
       },
       "source": [
         "from google.colab import drive\n",
@@ -45,7 +46,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -54,16 +55,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QonyUbIrLqo6",
-        "outputId": "3da281d8-974f-488f-e633-4f1fedb4fe40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QonyUbIrLqo6",
+        "outputId": "1af9c4b3-004d-4551-baed-fb68fcb9889d"
       },
       "source": [
         "drive.mount(\"/content/drive\", force_remount=True)"
       ],
-      "execution_count": 38,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +119,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b2d1882-ad5a-4b17-c4e9-f56f7c4a4763"
+        "outputId": "207230f6-2823-4023-b6b0-fc69fb752d8e"
       },
       "source": [
         "# loading doc into memory\n",
@@ -157,7 +158,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JOCu-2iXP-zk",
-        "outputId": "56b27567-5095-42c3-824b-48b6f88b2e23"
+        "outputId": "77f1d9e8-b5dd-417f-885a-7be86d6a496a"
       },
       "source": [
         "def load_descriptions(doc):\n",
@@ -203,12 +204,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pnHp9uOIUUv1",
-        "outputId": "41119468-c3e8-4acb-b069-80575f8a2225"
+        "outputId": "f7e9941e-40bb-448c-f182-e5a90458f6d9"
       },
       "source": [
         "list(descriptions.keys())[10:15]\n"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +225,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -235,28 +236,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9oybSKGiVAGL",
-        "outputId": "33a9d56f-fa33-4511-ec82-6458a93c453a"
+        "outputId": "1e486088-4fb1-4462-ad2d-c607c712d156"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['brown and white dog is running through the snow',\n",
-              " 'dog is running in the snow',\n",
-              " 'dog running through snow',\n",
-              " 'white and brown dog is running through snow covered field',\n",
-              " 'the white and brown dog is running over the surface of the snow']"
+              "['A brown and white dog is running through the snow .',\n",
+              " 'A dog is running in the snow',\n",
+              " 'A dog running through snow .',\n",
+              " 'a white and brown dog is running through a snow covered field .',\n",
+              " 'The white and brown dog is running over the surface of the snow .']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -288,7 +289,7 @@
         "# cleaning descriptions\n",
         "clean_descriptions(descriptions)"
       ],
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -298,7 +299,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjgJ7T1oqRTI",
-        "outputId": "12cd1355-1948-41a3-c596-2c1362acd5bb"
+        "outputId": "0bf2c0bc-2dac-4f06-9c1c-f1d7dbbd5465"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
@@ -330,7 +331,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jr6avM0baElj",
-        "outputId": "4677cc1e-97de-40e0-be13-59e5af937a54"
+        "outputId": "72709ea6-dbd2-4836-fab5-9a6f3d0cad26"
       },
       "source": [
         "# converting the loaded descriptions into a vocabulary of words\n",
@@ -385,7 +386,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eB4y-bGwsxPs",
-        "outputId": "0eb5cd39-b4ed-4ad3-cc3f-2bfaf2196997"
+        "outputId": "c1286795-3a74-4788-d813-079b3763730c"
       },
       "source": [
         "# loading a pre-defined list of photo identifiers\n",
@@ -510,11 +511,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RatRRFhIygdR",
-        "outputId": "6a82369b-e7ec-4db5-c9b8-bcc285bbfedb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RatRRFhIygdR",
+        "outputId": "db9e0df1-09e1-4345-cf44-184c93d9db2a"
       },
       "source": [
         "# loading clean descriptions into memory\n",
@@ -542,7 +543,7 @@
         "train_descriptions = load_clean_descriptions('descriptions.txt', train)\n",
         "print('Descriptions: train=%d' % len(train_descriptions))"
       ],
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,46 +571,49 @@
         "    x = preprocess_input(x)\n",
         "    return x"
       ],
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rV2gLkS21SFc",
-        "outputId": "140d7e7f-ac1d-49d1-f5bd-41569a39c600",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "rV2gLkS21SFc"
       },
       "source": [
         "# Loading the inception v3 model\n",
         "model = InceptionV3(weights='imagenet')"
       ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/inception_v3/inception_v3_weights_tf_dim_ordering_tf_kernels.h5\n",
-            "96116736/96112376 [==============================] - 3s 0us/step\n",
-            "96124928/96112376 [==============================] - 3s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "08_Ix_PM1TgT"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        },
+        "id": "08_Ix_PM1TgT",
+        "outputId": "65866812-ae98-44c1-fbf6-a33d3bc648af"
       },
       "source": [
         "# Creating a new model, by removing the last layer (output layer) from the inception v3\n",
         "model_new = Model(model.input, model.layers[-2].output)"
       ],
-      "execution_count": 19,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-18-c1b49505a3ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Creating a new model, by removing the last layer (output layer) from the inception v3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -624,17 +628,17 @@
         "    fea_vec = np.reshape(fea_vec, fea_vec.shape[1]) # reshaping from (1, 2048) to (2048, )\n",
         "    return fea_vec"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1OCIyHw27_aQ",
-        "outputId": "c716a784-7f6d-4fc7-b7b0-39e25c1bc69c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1OCIyHw27_aQ",
+        "outputId": "c716a784-7f6d-4fc7-b7b0-39e25c1bc69c"
       },
       "source": [
         "# Calling the funtion to encode all the train images\n",
@@ -671,11 +675,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hvrrMvZFJvwM",
-        "outputId": "8c116c09-64a1-417b-ea69-631bffc55e39",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hvrrMvZFJvwM",
+        "outputId": "8c116c09-64a1-417b-ea69-631bffc55e39"
       },
       "source": [
         "# Calling the funtion to encode all the test images\n",
@@ -707,6 +711,191 @@
         "    pickle.dump(encoding_test, encoded_pickle)"
       ],
       "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AYaQ3rAjUJct",
+        "outputId": "1bb01637-7f3b-46de-93b3-11a8176e0fb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_features = load(open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/Pickle_Mridul/encoded_train_images_mridul.pkl\", \"rb\"))\n",
+        "print('Photos: train=%d' % len(train_features))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Photos: train=6000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l1MBqq174xPr",
+        "outputId": "1abd2883-1d3c-47bc-ed47-1decbf1c0622",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Creating a list of all the training captions\n",
+        "all_train_captions = []\n",
+        "for key, val in train_descriptions.items():\n",
+        "    for cap in val:\n",
+        "        all_train_captions.append(cap)\n",
+        "len(all_train_captions)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ChDi7hDx45c9",
+        "outputId": "51bf682a-3489-4280-8611-6e8bd4aa5592",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Consider only words which occur at least 10 times in the corpus\n",
+        "word_count_threshold = 10\n",
+        "word_counts = {}\n",
+        "nsents = 0\n",
+        "for sent in all_train_captions:\n",
+        "    nsents += 1\n",
+        "    for w in sent.split(' '):\n",
+        "        word_counts[w] = word_counts.get(w, 0) + 1\n",
+        "\n",
+        "vocab = [w for w in word_counts if word_counts[w] >= word_count_threshold]\n",
+        "print('preprocessed words %d -> %d' % (len(word_counts), len(vocab)))"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "preprocessed words 7578 -> 1651\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lKkzxgOV4_Gt"
+      },
+      "source": [
+        "ixtoword = {}\n",
+        "wordtoix = {}\n",
+        "\n",
+        "ix = 1\n",
+        "for w in vocab:\n",
+        "    wordtoix[w] = ix\n",
+        "    ixtoword[ix] = w\n",
+        "    ix += 1"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r4dEZQJ45CaX",
+        "outputId": "a62b581a-4413-4143-c094-72cfa01c010f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "vocab_size = len(ixtoword) + 1 # one for appended 0's\n",
+        "vocab_size"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1652"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hp3qPKHc5E_7",
+        "outputId": "8c4e2774-8493-46f7-8937-11141b650b8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# convert a dictionary of clean descriptions to a list of descriptions\n",
+        "def to_lines(descriptions):\n",
+        "\tall_desc = list()\n",
+        "\tfor key in descriptions.keys():\n",
+        "\t\t[all_desc.append(d) for d in descriptions[key]]\n",
+        "\treturn all_desc\n",
+        "\n",
+        "# calculate the length of the description with the most words\n",
+        "def max_length(descriptions):\n",
+        "\tlines = to_lines(descriptions)\n",
+        "\treturn max(len(d.split()) for d in lines)\n",
+        "\n",
+        "# determine the maximum sequence length\n",
+        "max_length = max_length(train_descriptions)\n",
+        "print('Description Length: %d' % max_length)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Description Length: 34\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ogKg_ft75Ybx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
