data generator created

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -6,7 +6,7 @@
       "name": "automatic image captioning.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyPidV+dkiGDckRzSDkjG94p",
+      "authorship_tag": "ABX9TyPCzyv/Anyv+iVJkbHJjs1S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -716,11 +716,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AYaQ3rAjUJct",
-        "outputId": "1bb01637-7f3b-46de-93b3-11a8176e0fb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AYaQ3rAjUJct",
+        "outputId": "1bb01637-7f3b-46de-93b3-11a8176e0fb7"
       },
       "source": [
         "train_features = load(open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/Pickle_Mridul/encoded_train_images_mridul.pkl\", \"rb\"))\n",
@@ -740,11 +740,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l1MBqq174xPr",
-        "outputId": "1abd2883-1d3c-47bc-ed47-1decbf1c0622",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l1MBqq174xPr",
+        "outputId": "1abd2883-1d3c-47bc-ed47-1decbf1c0622"
       },
       "source": [
         "# Creating a list of all the training captions\n",
@@ -773,11 +773,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ChDi7hDx45c9",
-        "outputId": "51bf682a-3489-4280-8611-6e8bd4aa5592",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ChDi7hDx45c9",
+        "outputId": "51bf682a-3489-4280-8611-6e8bd4aa5592"
       },
       "source": [
         "# Consider only words which occur at least 10 times in the corpus\n",
@@ -824,11 +824,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r4dEZQJ45CaX",
-        "outputId": "a62b581a-4413-4143-c094-72cfa01c010f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r4dEZQJ45CaX",
+        "outputId": "a62b581a-4413-4143-c094-72cfa01c010f"
       },
       "source": [
         "vocab_size = len(ixtoword) + 1 # one for appended 0's\n",
@@ -853,11 +853,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hp3qPKHc5E_7",
-        "outputId": "8c4e2774-8493-46f7-8937-11141b650b8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hp3qPKHc5E_7",
+        "outputId": "8c4e2774-8493-46f7-8937-11141b650b8a"
       },
       "source": [
         "# convert a dictionary of clean descriptions to a list of descriptions\n",
@@ -893,9 +893,38 @@
         "id": "ogKg_ft75Ybx"
       },
       "source": [
-        ""
+        "# data generator, intended to be used in a call to model.fit_generator()\n",
+        "def data_generator(descriptions, photos, wordtoix, max_length, num_photos_per_batch):\n",
+        "    X1, X2, y = list(), list(), list()\n",
+        "    n=0\n",
+        "    # loop for ever over images\n",
+        "    while 1:\n",
+        "        for key, desc_list in descriptions.items():\n",
+        "            n+=1\n",
+        "            # retrieve the photo feature\n",
+        "            photo = photos[key+'.jpg']\n",
+        "            for desc in desc_list:\n",
+        "                # encode the sequence\n",
+        "                seq = [wordtoix[word] for word in desc.split(' ') if word in wordtoix]\n",
+        "                # split one sequence into multiple X, y pairs\n",
+        "                for i in range(1, len(seq)):\n",
+        "                    # split into input and output pair\n",
+        "                    in_seq, out_seq = seq[:i], seq[i]\n",
+        "                    # pad input sequence\n",
+        "                    in_seq = pad_sequences([in_seq], maxlen=max_length)[0]\n",
+        "                    # encode output sequence\n",
+        "                    out_seq = to_categorical([out_seq], num_classes=vocab_size)[0]\n",
+        "                    # store\n",
+        "                    X1.append(photo)\n",
+        "                    X2.append(in_seq)\n",
+        "                    y.append(out_seq)\n",
+        "            # yield the batch data\n",
+        "            if n==num_photos_per_batch:\n",
+        "                yield [[array(X1), array(X2)], array(y)]\n",
+        "                X1, X2, y = list(), list(), list()\n",
+        "                n=0"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     }
   ]
